revmix.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  replicas: 3
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: <Image>
        resources:
          requests:
            cpu: 250m
            memory: "128Mi"
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: <Port>
    targetPort: <Target Port>

# frontendpipeline 6a89fc76-4c72-4e6a-8194-c0ca904bf265
# backend-uploadmusic 001c8954-2015-4a63-923f-02a5b4466180
